[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tile1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Tile/Tile3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Tile/Tile2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/PickTile.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Fredoka_One/FredokaOne.tres" type="DynamicFont" id=5]
[ext_resource path="res://tileset/misc/redraw.png" type="Texture" id=6]

[node name="PickTile" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 62.0
margin_right = 421.0
margin_bottom = 230.0
color = Color( 0, 0, 0, 0.184314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile1" parent="." instance=ExtResource( 1 )]
position = Vector2( 7.56299, 75.6299 )

[node name="Tile2" parent="." instance=ExtResource( 3 )]
position = Vector2( 109.033, 74.3694 )

[node name="Tile3" parent="." instance=ExtResource( 2 )]
position = Vector2( 209.243, 75.6299 )

[node name="Label2" type="Label" parent="."]
margin_left = 112.362
margin_top = 192.957
margin_right = 205.362
margin_bottom = 212.957
rect_pivot_offset = Vector2( 53.4244, 7 )
custom_fonts/font = ExtResource( 5 )
text = "(2)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 211.807
margin_top = 192.957
margin_right = 304.807
margin_bottom = 206.957
rect_pivot_offset = Vector2( 53.4244, 7 )
custom_fonts/font = ExtResource( 5 )
text = "(3)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_left = 8.8312
margin_top = 192.957
margin_right = 101.831
margin_bottom = 206.957
rect_pivot_offset = Vector2( 53.4244, 7 )
custom_fonts/font = ExtResource( 5 )
text = "(1)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 315.757
margin_top = 192.957
margin_right = 408.757
margin_bottom = 212.957
rect_pivot_offset = Vector2( 53.4244, 7 )
custom_fonts/font = ExtResource( 5 )
text = "(R)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 361.851, 140.545 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
